rust/sensorwatch-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const SW_API_VERSION_MAJOR: u32 = 0;
pub const SW_API_VERSION_MINOR: u32 = 2;
pub const SW_API_VERSION_PATCH: u32 = 0;
pub const SW_API_VERSION: u32 = 200;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sw_session {
    _unused: [u8; 0],
}
pub type sw_session_t = sw_session;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sw_snapshot {
    _unused: [u8; 0],
}
pub type sw_snapshot_t = sw_snapshot;
pub const SW_OK: sw_error = 0;
pub const SW_ERR_NULL_POINTER: sw_error = -1;
pub const SW_ERR_INVALID_ARGUMENT: sw_error = -2;
pub const SW_ERR_UNSUPPORTED_PLATFORM: sw_error = -3;
pub const SW_ERR_SOURCE_UNAVAILABLE: sw_error = -4;
pub const SW_ERR_MAP_FAILED: sw_error = -5;
pub const SW_ERR_BAD_MAGIC: sw_error = -6;
pub const SW_ERR_CORRUPT_DATA: sw_error = -7;
pub const SW_ERR_OUT_OF_MEMORY: sw_error = -8;
pub const SW_ERR_INDEX_OUT_OF_RANGE: sw_error = -9;
pub const SW_ERR_BUFFER_TOO_SMALL: sw_error = -10;
pub const SW_ERR_VERSION_MISMATCH: sw_error = -11;
pub const SW_ERR_INTERNAL: sw_error = -12;
pub type sw_error = ::core::ffi::c_int;
pub use self::sw_error as sw_error_t;
pub const SW_READING_TYPE_NONE: sw_reading_type = 0;
pub const SW_READING_TYPE_TEMPERATURE: sw_reading_type = 1;
pub const SW_READING_TYPE_VOLTAGE: sw_reading_type = 2;
pub const SW_READING_TYPE_FAN: sw_reading_type = 3;
pub const SW_READING_TYPE_CURRENT: sw_reading_type = 4;
pub const SW_READING_TYPE_POWER: sw_reading_type = 5;
pub const SW_READING_TYPE_CLOCK: sw_reading_type = 6;
pub const SW_READING_TYPE_USAGE: sw_reading_type = 7;
pub const SW_READING_TYPE_OTHER: sw_reading_type = 8;
pub const SW_READING_TYPE_UNKNOWN: sw_reading_type = 255;
pub type sw_reading_type = ::core::ffi::c_int;
pub use self::sw_reading_type as sw_reading_type_t;
unsafe extern "C" {
    pub fn sw_api_version() -> u32;
    pub fn sw_error_string(error: sw_error_t) -> *const ::core::ffi::c_char;
    pub fn sw_session_open(out_session: *mut *mut sw_session_t) -> sw_error_t;
    pub fn sw_session_close(session: *mut sw_session_t);
    pub fn sw_snapshot_take(
        session: *mut sw_session_t,
        out_snapshot: *mut *mut sw_snapshot_t,
    ) -> sw_error_t;
    pub fn sw_snapshot_from_buffer(
        buf: *const u8,
        len: usize,
        out_snapshot: *mut *mut sw_snapshot_t,
    ) -> sw_error_t;
    pub fn sw_snapshot_free(snapshot: *mut sw_snapshot_t);
    pub fn sw_snapshot_entry_count(
        snapshot: *const sw_snapshot_t,
        out_count: *mut u32,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_reading_type(
        snapshot: *const sw_snapshot_t,
        index: u32,
        out_type: *mut sw_reading_type_t,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_value(
        snapshot: *const sw_snapshot_t,
        index: u32,
        out_value: *mut f64,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_minimum(
        snapshot: *const sw_snapshot_t,
        index: u32,
        out_value: *mut f64,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_maximum(
        snapshot: *const sw_snapshot_t,
        index: u32,
        out_value: *mut f64,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_average(
        snapshot: *const sw_snapshot_t,
        index: u32,
        out_value: *mut f64,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_source_name(
        snapshot: *const sw_snapshot_t,
        index: u32,
        buffer: *mut ::core::ffi::c_char,
        buffer_size: usize,
        out_required: *mut usize,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_sensor_name(
        snapshot: *const sw_snapshot_t,
        index: u32,
        buffer: *mut ::core::ffi::c_char,
        buffer_size: usize,
        out_required: *mut usize,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_reading_name(
        snapshot: *const sw_snapshot_t,
        index: u32,
        buffer: *mut ::core::ffi::c_char,
        buffer_size: usize,
        out_required: *mut usize,
    ) -> sw_error_t;
    pub fn sw_snapshot_get_unit(
        snapshot: *const sw_snapshot_t,
        index: u32,
        buffer: *mut ::core::ffi::c_char,
        buffer_size: usize,
        out_required: *mut usize,
    ) -> sw_error_t;
}
